--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	
 	<nav>
-		<a href="#">Home</a> |
-		<a href="#">About us</a> |
-		<a href="#">Contact us</a> |
+		<a href="#">Home</a><br>
+		<a href="#">About us</a><br>
+		<a href="#">Contact us</a><br>
 	</nav>
 
 	<h2>3 random audios</h2>
