--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	
 	<nav>
-		<a href="#">Home</a><br>
-		<a href="#">About us</a><br>
-		<a href="#">Contact us</a><br>
+		<a href="https://acciojob.com/">Home</a><br>
+		<a href="https://acciojob.com/">About us</a><br>
+		<a href="https://acciojob.com/">Contact us</a><br>
 	</nav>
 
 	<h1>3 random audios</h1>
